# mandelbrot

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
fractal-generator-gui/: Cargo.toml
fractal-generator-gui/src/: lib.rs
gui/: Cargo.toml
gui/src/: event.rs  generator.rs  hilbert_curve.rs  l_system.rs  lib.rs  main.rs  resource.rs  turtle.rs  turtle_l_system.rs
gui/src/message/: mod.rs
gui/src/plugin/: mod.rs  state.rs
gui/src/system/: generator.rs
mandelbrot-gui/: Cargo.toml
mandelbrot-gui/src/: lib.rs
sierpinski-triangle/: Cargo.toml
sierpinski-triangle/src/: lib.rs
src/: color.rs  color_scale.rs  complex_number.rs  gui.rs  lib.rs  mandelbrot.rs  pixel.rs
src/config/: mod.rs  viewport.rs
viewer/: Cargo.toml
viewer/src/: complex.rs  lib.rs  main.rs
