[package]
name = "sierpinski-triangle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.17"
num = "0.4.1"
image = { version = "0.24.7", optional = true }

[features]
default = []
image = ["dep:image"]
